fixing some spacing

--- a/styles.css
+++ b/styles.css
@@ -128,25 +128,12 @@ a:hover {
 }
 .media-hover:hover {
   transform: scale(1.2);
+  z-index: 1;
 }
 /* .carousel-inner {
   overflow: visible;
 } */
-.z-index2 {
-  z-index: 2;
-}
-.z-index3 {
-  z-index: 3;
-}
-.z-index4 {
-  z-index: 4;
-}
-.z-index5 {
-  z-index: 5;
-}
-.z-index6 {
-  z-index: 6;
-}
+
 .ftr-block {
   max-width: 900px;
   width: 100%;
@@ -159,4 +146,38 @@ a:hover {
 .copyright-font {
   font-size: 12px;
   color: var(--text-color);
+}
+/* --------------------------------------------------------------------- */
+.edit-section {
+  max-width: 700px;
+}
+.edit-title {
+  font-size: 50px;
+}
+.edit-block {
+  border-top: 1px solid var(--text-color);
+  border-bottom: 1px solid var(--text-color);
+  padding-right: 20px;
+}
+.strive-std-b {
+  background-color: var(--text-color);
+  padding-inline: 10px;
+  padding-block: 5px;
+}
+.b-border {
+  padding-bottom: 20px;
+  border-bottom: 1px solid var(--text-color);
+}
+.m-btn {
+  border-radius: 0;
+  font-size: 12px;
+}
+.edit-btn {
+  letter-spacing: 1px;
+  border: 1px solid var(--text-color);
+  border-radius: 0;
+  color: var(--text-color);
+  padding-top: 2px;
+  padding-bottom: 2px;
+  margin-top: 10px;
 }
